testing components and adding plugins

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,12 @@
 ---
-
+import Head from '../components/Head.astro';
+import site from '../data/site.json';
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
+	<Head title={ site.title }>
+	</Head>
 	<body>
-		<h1>Astro</h1>
+		<h1>{ site.title }</h1>
 	</body>
 </html>
