--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -7,4 +7,5 @@ const { title } = Astro.props;
   <meta name="viewport" content="width=device-width" />
   <meta name="generator" content={Astro.generator} />
   <title>{ title }</title>
+  <link rel="stylesheet" href="/src/styles/globals.css">
 </head>
