--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Head from '../components/Head.astro';
+import Footer from '../components/Footer.astro';
 import site from '../data/site.json';
 ---
 
@@ -8,5 +9,10 @@ import site from '../data/site.json';
 	</Head>
 	<body>
 		<h1>{ site.title }</h1>
+		<ul>
+			<li><a href={ site.author.linkedin }>LinkedIn</a></li>
+		</ul>
 	</body>
+	<Footer>
+	</Footer>
 </html>
