--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,7 +45,7 @@
 }
 
 .cursor {
-    animation: 300ms linear 300ms infinite alternate blink;
+    animation: 300ms linear 300ms 15 alternate blink;
 }
 
 @keyframes blink {
